# tem-rat

./: .gitignore  CMakeLists.txt  README.md  cr_unix.sh  cri_win32.sh
include/: csock.hpp  csockDefines.hpp  csockManuel.hpp  csockPlatform.hpp  payloadFactory.hpp  ratServer.hpp  temDefines.hpp  utils.hpp
src/: main.cpp  mainClient.cpp
src/rat/: payloadFactory.cpp  ratServer.cpp
src/sockets/: csock.cpp  csockManuel.cpp
src/utils/: systemAccess.cpp
test/: CLIENT_PAYLOAD  CLIENT_PAYLOAD_1  TEM_RAT  TEM_RAT_1
utils-WIN32/win32-dll/: toolchain-windows.cmake
